--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<main>
-  <router-outlet></router-outlet>  <!-- L'espace pour afficher les composants selon les routes -->
-</main>
+<router-outlet>
+</router-outlet> 
+
