--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,39 +1,76 @@
-<div class="parent">
-    <div class="container">
-        <form [formGroup]="userForm">
-            <h1>Login</h1>
-            <div class="input-box">
-                <input type="email" formControlName="username" placeholder="username">
-                <i class='bx bx-envelope'></i>
+<div class="w-1/2 mx-auto h-screen flex items-center justify-center">
+  <div class="w-full flex flex-col items-center">
+    <img
+      src="assets/images/logo.png"
+      alt="logo"
+      class="logo"
+      width="100"
+      height="100"
+      class="mb-8"
+    />
+    <form
+      [formGroup]="userForm"
+      (ngSubmit)="login()"
+      class="w-1/2 flex flex-col items-center"
+    >
+      <h1 class="self-start">Login</h1>
+      <hlm-form-field label="Username" class="w-full mb-8">
+        <input
+          type="text"
+          hlmInput
+          formControlName="username"
+          placeholder="Enter your username"
+          class="w-full"
+        />
+        <div
+          class="text-danger"
+          *ngIf="
+            userForm.controls['username'].touched &&
+            userForm.controls['username'].invalid
+          "
+        >
+          <span *ngIf="userForm.controls['username'].errors?.['required']"
+            >Username is required</span
+          >
+        </div>
+      </hlm-form-field>
 
-                <div class="text-danger">
-                @if (userForm.controls['username'].touched && userForm.controls['username'].errors?.['required']) {
-                <span>This is required</span>
-                }
-            </div>
+      <hlm-form-field label="Password" class="w-full">
+        <input
+          type="password"
+          hlmInput
+          formControlName="password"
+          placeholder="Enter your password"
+          class="w-full"
+        />
+        <div
+          class="text-danger"
+          *ngIf="
+            userForm.controls['password'].touched &&
+            userForm.controls['password'].invalid
+          "
+        >
+          <span *ngIf="userForm.controls['password'].errors?.['required']"
+            >Password is required</span
+          >
+          <span *ngIf="userForm.controls['password'].errors?.['minlength']"
+            >Password must be at least 6 characters</span
+          >
+        </div>
+      </hlm-form-field>
 
-            <div class="input-box">
-                <input type="password" formControlName="password" placeholder="Password">
-                <i class='bx bx-lock-alt'></i>
+      <p class="w-full text-center mt-8">
+        You don't have an account ? Sign in <u>here</u>.
+      </p>
 
-                <div class="text-danger">
-                    @if (userForm.controls['password'].touched && userForm.controls['password'].errors?.['minlength']) {
-                    <span>This is required</span>
-                    }
-            </div>
-            </div>
-
-    </div>
-    <div class="remember">
-        <label for="#">
-            <input type="checkbox"> Remember me
-        </label>
-        <a href="#">Forgot password?</a>
-    </div>
-    <button class="btn" (click)="login()">Login</button>
-    <div class="register">
-        <p>Don't have an account? <br> <a routerLink="/register">Register</a></p>
-    </div>
+      <button
+        class="btn"
+        hlmButton
+        type="submit"
+        class="w-fit mx-auto px-8 py-2 rounded-xl bg-bg-button text-text-button"
+      >
+        Login
+      </button>
     </form>
-</div>
+  </div>
 </div>
