--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,26 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --color-border: #035D44;
+  --color-border-dark: #D1ECE4;
+  --color-bg-button: #035D44;
+  --color-text-button: #D1ECE4;
+}
+
+:root {
+  --bg-color: #D1ECE4;
+  --text-color: #035D44;
+}
+
+.dark {
+  --bg-color: #06130F; 
+  --text-color: #D1ECE4; 
+}
+
+body {
+  user-select: none;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
