--- a/frontend/src/app/components/overview/overview.component.html
+++ b/frontend/src/app/components/overview/overview.component.html
@@ -1,7 +1,6 @@
-<div class="dashboard-container">
+<div class="overview-container">
     <h1>Bienvenue, {{ username }} !</h1>
     <p>Vous êtes connecté à votre tableau de bord.</p>
     
     <button class="btn-logout" (click)="logout()">Déconnexion</button>
   </div>
-  
