--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai&display=swap');
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
@@ -6,6 +7,11 @@
   --color-border-dark: #D1ECE4;
   --color-bg-button: #035D44;
   --color-text-button: #D1ECE4;
+  --color-bg-button-nav: #FFFFFF;
+  --color-text-button-nav: #93C1B4;
+  --color-bg-button-active: #535353;
+  --color-text-button-active: #FFFFFF;
+  --font-baloo: 'Baloo Bhai', cursive, sans-serif;
 }
 
 :root {
