--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <button
   (click)="toggleDarkMode()"
-  class="fixed p-2 border-border border-[1px] dark:border-border-dark rounded-3xl cursor-pointer top-4 right-4"
+  class="fixed p-2 border-border border-[1px] dark:border-border-dark rounded-3xl cursor-pointer bottom-4 right-4"
 >
   <lucide-icon size="24" [name]="isDarkMode ? 'moon' : 'sun'"></lucide-icon>
 </button>
