finish ux recipes

--- a/frontend/src/app/routes/recipes/recipes.component.html
+++ b/frontend/src/app/routes/recipes/recipes.component.html
@@ -1,3 +1,8 @@
-<div class="w-auto mx-10">
-  <app-recipes-management></app-recipes-management>
+<div class="flex justify-around overflow-hidden mt-25">
+  <div class="w-1/4">
+    <app-recipes-management></app-recipes-management>
+  </div>
+  <div class="w-5/7">
+    <app-recipes-content></app-recipes-content>
+  </div>
 </div>
