--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="">
+<nav class="fixed w-full top-0">
   <div class="flex flex-row items-center justify-between bg-bg-color p-4">
     <div class="flex flex-row items-center justify-center">
       <img
