--- a/frontend/src/app/routes/recipes/components/recipes-management/recipes-management.component.html
+++ b/frontend/src/app/routes/recipes/components/recipes-management/recipes-management.component.html
@@ -1,4 +1,4 @@
-<div class="w-1/4 bg-white rounded-lg" style="height: 80vh">
+<div class="bg-white rounded-lg" style="height: 80vh">
   <div class="px-3 py-3">
     <button
       class="w-full rounded-lg h-10 bg-[#428573] text-white hover:cursor-pointer hover:bg-[#419880] transition-all duration-300"
@@ -30,10 +30,10 @@
       </div>
       <div class="mt-3 text-black">
         <div class="flex flex-row w-full justify-between items-center border-b-2 border-[#A7A89F] pb-2 mb-2 hover:cursor-pointer hover:text-[#A7A89F] transition-all duration-300">
-          <div class="flex flex-row items-center">
+          <div class="flex flex-row items-center ">
             <lucide-icon
               size="18"
-              class="mr-1 text-black"
+              class="mr-1 text-black "
               [name]="icons.File"
             ></lucide-icon>
             <p>Pâtes au saumon</p>
@@ -41,12 +41,12 @@
           <div class="flex flex-row items-center">
             <lucide-icon
               size="18"
-              class="mr-1 text-black"
+              class="mr-1 text-black hover:text-[#A7A89F] transition-all duration-300"
               [name]="icons.PencilLine"
             ></lucide-icon>
             <lucide-icon
               size="18"
-              class="mr-1 text-red-500"
+              class="mr-1 text-red-500 hover:text-[#a11a0b] transition-all duration-300"
               [name]="icons.Trash2"
             ></lucide-icon>
           </div>
